--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/jasmine": "2.5.38",
     "@types/node": "7.0.5",
     "codelyzer": "2.0.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
     "karma": "1.4.1",
@@ -44,6 +46,7 @@
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.0",
     "karma-remap-istanbul": "0.2.2",
+    "prettier": "^1.11.1",
     "protractor": "5.1.0",
     "ts-node": "2.1.0",
     "tslint": "4.5.0",
